Fixed files so that .ENV NODE_ENV environment variable is effectively used instead of PORT

--- a/.ENV.Sample
+++ b/.ENV.Sample
@@ -10,4 +10,6 @@ SMTP_ADMIN_USER_PASSWORD1=<your email password>
 SMTP_ADMIN_USER_EMAIL=<your mailtrap user name>
 SMTP_ADMIN_USER_PASSWORD=<your mailtrap password>
 
-#PORT=8081
+
+#NODE_ENV=production
+NODE_ENV=development
